# gospel-library-scraper

./: .gitignore  Cargo.toml  readme.md  run_debug.sh
src/: cli.yml  lib.rs  main.rs  navigate_scripture_book.rs
src/fs_util/: mod.rs
src/handle_url/: mod.rs
src/navigate_scripture_book/: copier.rs  mod.rs
src/navigate_scripture_book/copier/: get_page.rs  get_urls.rs  mod.rs
src/navigate_scripture_book/copier/get_page/: mod.rs  text_transform.rs
src/navigate_scriptures/: copier.rs  make_book_index_file.rs  mod.rs
src/navigate_scriptures/copier/: get_page.rs  scraped_page.rs
src/navigate_scriptures/copier/get_page/: text_transform.rs
src/navigator/: mod.rs
src/setup/: mod.rs
