[package]
name = "gospellibraryscraper"
version = "1.0.0"
authors = ["andrewgremlich <andrew.gremlich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.1.0" }
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
scraper = "0.12.0"
mkdirp = "1.0.0"
regex = "1.5.4"
